crates/query-engine/translation/tests/snapshots/tests__native_queries__select_artist_by_id.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
WITH NATIVE_QUERY_artist_by_id_1 AS (
  SELECT
    *
  FROM
    public."Artist"
  WHERE
    "ArtistId" = 1
)
SELECT
  JSON_OBJECT('rows', ARRAY_AGG(universe_2)) AS universe
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          artist_by_id_0.Name AS Name
        FROM
          NATIVE_QUERY_artist_by_id_1 AS artist_by_id_0
      ) AS rows_3
  ) AS universe_2

[]
