crates/query-engine/translation/tests/snapshots/tests__native_queries__select_artist_by_name.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
WITH "%1_NATIVE_QUERY_artist_by_name" AS (
  SELECT
    *
  FROM
    public."Artist"
  WHERE
    "Name" = cast($1 as string)
)
SELECT
  row_to_json("%2_universe") AS "universe"
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          coalesce(json_agg(row_to_json("%3_rows")), '[]') AS "rows"
        FROM
          (
            SELECT
              "%0_artist_by_name"."ArtistId" AS "Id"
            FROM
              "%1_NATIVE_QUERY_artist_by_name" AS "%0_artist_by_name"
          ) AS "%3_rows"
      ) AS "%3_rows"
  ) AS "%2_universe"

[(1, String("Rush"))]
